--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,12 @@
 {% extends "template.html" %}
-{% block content %}
-    <div class="jumbo">
-     <h2>Welcome!</h2>
-    <br/>
-    </div>
+
+
+{% block title %}
+   Home :: GetAGrip
 {% endblock %}
+
+{% block content %}
+    <div class="hero-unit"><h1>Welcome!</h1></div>
+{% endblock %}
+
+
