--- a/templates/template.html
+++ b/templates/template.html
@@ -5,7 +5,7 @@
        <title> {% block title %}{% endblock %}</title>
     </head>
     <body>
-        <div class="navbar navbar-inner navbar-fixed-top">
+        <div class="nav nav-pills">
       <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
