tons or messy html for homepage. Carousel with sliding added. Blurbs started. Nave bar is eh

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,5 +5,5 @@ About :: GetAGrip
 {% endblock  %}
 
 {% block content %}
-    <div class="hero-unit"><p>iweljknvslwekjsrnvw,enma sv,ewjmasnv lje <br/> eiqlsrujn2kjeqnrs</p></div>
+    <div class="hero-unit"><h1>About</h1></div>
 {% endblock  %}
