--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,80 @@
 {% extends "template.html" %}
 
+{% block head %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+{% endblock %}
 
 {% block title %}
    Home :: GetAGrip
 {% endblock %}
 
 {% block content %}
-    <div class="hero-unit"><h1>Welcome!</h1></div>
+    <div id="homeCarousel" class="carousel slide">
+
+    <!-- Carousel items -->
+    
+    <div class="carousel-inner">
+        <div align="center" class="active item">
+            <img src="/static/Pictures/mimi1.jpg" alt=""/>
+            <div class="carousel-caption">
+                <p>Mimi is cute</p>
+            </div>
+        </div>
+
+        <div class="item" align="center">
+            <img src="/static/Pictures/mimi2.jpg" alt=""/>
+            <div class="carousel-caption">
+                <p>Mimi is pretty</p>
+            </div>
+        </div>
+
+        <div class="item" align="center">
+            <img src="/static/Pictures/mimi3.jpg" alt=""/>
+            <div class="carousel-caption">
+                <p>Mimi is da bomb</p>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Carousel nav -->
+        <a class="carousel-control left" href="#homeCarousel" data-slide="prev">&lsaquo;</a>
+        <a class="carousel-control right" href="#homeCarousel" data-slide="next">&rsaquo;</a>
+    </div>
+    <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    <script>
+        $(document).ready(function(){
+            $('.carousel').carousel();
+           });
+    </script>
+<div class="container marketing">
+
+      <!-- Four columns of text below the carousel -->
+      <div class="row">
+        <div class="span3">
+          <img class="img-circle" src="static/Pictures/mimi2.jpg">
+          <h2>No Slip Grip</h2>
+         <p></p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span3">
+          <img class="img-circle" src="static/Pictures/mimi2.jpg">
+          <h2>Weather Resistant</h2>
+          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span3">
+          <img class="img-circle" src="static/Pictures/mimi2.jpg">
+          <h2>Compact, Flexible, Versatile</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span3">
+          <img class="img-circle" src="static/Pictures/mimi2.jpg">
+          <h2>Easy to use, Easy to clean</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper$
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>  
+    </div>
 {% endblock %}
 
 
