--- a/templates/jonathan.html
+++ b/templates/jonathan.html
@@ -1,1 +1,7 @@
 {% extends "template.html" %}
+
+{% block body %}
+	<div class="span2">
+		<img src="static/Pictures/jon.jpg" />
+	</div>
+{% endblock %}
