--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,5 +5,14 @@
 {% endblock  %}
 
 {% block content  %}
-    <div class="hero-unit"><h1>Contact Us</h1></div>
+    <div allign="left">
+        <form>
+            Full Name: <input type="text" name="Fullname"><br>
+            Email: <input type="text" name="Email"><br>
+            Your Comment:<br>
+            <textarea rows="15" cols="120" name="YourComment">
+            </textarea><br>
+            <button type="submit" formaction="http://....//">Submit</button>
+        </form>
+    </div>
 {% endblock  %}
