contact updates 4:56pm 07/15

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,15 +5,13 @@
 {% endblock  %}
 
 {% block content  %}
-    <div align="left">
+    <div>
         <form>
             Full Name: <input type="text" name="Fullname"><br>
             Email: <input type="text" name="Email"><br>
             Your Comment:<br>
-                <div>
-                    <textarea name="YourComment" rows="7" cols="160">
-                    </textarea>
-                </div><br>
+                <textarea name="YourComment" col="60" rows="7">
+                </textarea>
             <button type="submit" formaction="http://....//">Submit</button>
         </form>
     </div>
