--- a/templates/home.html
+++ b/templates/home.html
@@ -49,26 +49,29 @@
 <div class="container marketing">
 
       <!-- Four columns of text below the carousel -->
-      <div class="row">
+      <div class="row>
 
         <div class="span3">
           <img class="img-circle" src="static/Pictures/mimi2.jpg">
           <h2>No Slip Grip</h2>
          <p>High performance silicone compounds mold the product to your steering wheel, giving you a no slip grip for every driving experience. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
-        
+        </div>
+
         <div class="span3">
           <img class="img-circle" src="static/Pictures/mimi2.jpg">
           <h2>Weather Resistant</h2>
           <p>Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
         
         <div class="span3">
           <img class="img-circle" src="static/Pictures/mimi2.jpg">
           <h2>Compact, Flexible, Versatile</h2>
           <p>Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
-       
+        </div>
+
         <div class="span3">
           <img class="img-circle" src="static/Pictures/mimi2.jpg">
           <h2>Easy to use, Easy to clean</h2>
