--- a/templates/template.html
+++ b/templates/template.html
@@ -48,7 +48,7 @@
 	</ul>
 	</div>
         <div class="container">
-            {% block body %} {% endblock %}
+            {% block content %} {% endblock %}
         </div>
 
 <div class="modal hide fade" id="logIn">
