--- a/templates/template.html
+++ b/templates/template.html
@@ -29,7 +29,7 @@
 
     </head>
     <body>
-        <h1 align="center"><a href="http://imgur.com/RBsuaPK"><img src="http://i.imgur.com/RBsuaPK.png" title="Hosted by imgur.com" /></a><img src="http://i.imgur.com/RBsuaPK.png" width="400" height="200"</h1>
+        <h1 align="center"><img src="http://i.imgur.com/RBsuaPK.png" width="400" height="200"></h1>
         </br>
         <div class="pills">
 	<div class="centered-pills">
