--- a/templates/home.html
+++ b/templates/home.html
@@ -48,38 +48,44 @@
     </script>
 <div class="container marketing">
 
-      <!-- Four columns of text below the carousel -->
-      <div class="row>
-
-        <div class="span2">
-          <img class="img-circle" src="static/Pictures/mimi2.jpg">
-          <h2>No Slip Grip</h2>
-         <p>High performance silicone compounds mold the product to your steering wheel, giving you a no slip grip for every driving experience. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-
-        <div class="span2">
-          <img class="img-circle" src="static/Pictures/mimi2.jpg">
-          <h2>Weather Resistant</h2>
-          <p>Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        
-        <div class="span2">
-          <img class="img-circle" src="static/Pictures/mimi2.jpg">
-          <h2>Compact, Flexible, Versatile</h2>
-          <p>Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-
-        <div class="span2">
-          <img class="img-circle" src="static/Pictures/mimi2.jpg">
-          <h2>Easy to use, Easy to clean</h2>
-          <p>Unlike other products, Get-A-Grip can be applied in just three seconds! Simply place the product on the top of the wheel, pull down on the sides, and snap the bottom on to complete. When you're done, unsnap it buy pulling on the bottom, and then throw it in the dish washer to wash! It is 100% dishwasher safe and anti-bacterial.
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-  
-    </div>
+	<!-- Four columns of text below the carousel -->
+	
+	<div class="row">
+	
+		<div class="span3">
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;">
+			<h2> No Slip Grip</h2>
+			<p>
+				"High performance silicone compounds mold the product to your steering wheel, giving you a no slip grip for every driving experience."
+			</p>
+			<p>
+				<a class="btn" href="#">View details &raquo;</a></p>
+			</p>
+		</div>
+		
+		<div class="span3">
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
+			<h2> Weather Resistant</h2> 
+			<p> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility."</p>
+			<p><a class="btn" href-'#"> View Details &raquo;</a></p>
+		</div>
+		
+		<div class="span3">
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
+			<h2>Compact, Flexible, Versatile</h2>
+			<p>"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
+			<p><a class="btn" href="#">View Details &raquo;</a></p>
+		</div>
+		
+		<div class="span3">
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;">
+			<h2>Easy to use, Easy to clean</h2>
+			<p>"Unlike other products, Get-A-Grip can be applied in just three seconds! Simply place the product on the top of the wheel, pull down on the sides, and snap the bottom on to complete. When you're done, unsnap it buy pulling on the bottom, and then throw it in the dish washer to wash! It is 100% dishwasher safe and anti-bacterial."</p>
+			<p><a class="btn" href="#">View Details &raquo;</a></p>
+		</div>
+		
+	</div>
+</div>
 {% endblock %}
 
 
