still working on log in

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,4 +1,5 @@
-{% extends template.html %}
+{% extends "template.html" %}
 
 {% block content %}
-
+    <h2>Welcome! You are now logged in!</h2>
+{% endblock %}
