--- a/templates/log.html
+++ b/templates/log.html
@@ -1,21 +1,19 @@
-{% extends template.html %}
-
+{% extends "template.html" %}
 {% block content %}
     <h1>Log In</h1>
     {% if error %}
-        <p class="error">Error: </p> {{ error }}
+        <p class=error><strong>Error:</strong> {{ error }}
     {% endif %}
         
-    <form action="" method="POST">
+    <form action="" method=post>
         <dl>
             <dt>Username:
-            <dd><input type="text" name="username" value="{{ request.form.username }}">
+            <dd><input type=text name=username value="{{ request.form.username }}">
 
             <dt>Password:
-            <dd><input type="password" name="password">
+            <dd><input type=password name=password>
         </dl>
-
-        <p><input type="password" value="Login">
+        <p><input type=submit value=Login>
     </form>
 {% endblock %} 
     
