--- a/templates/home.html
+++ b/templates/home.html
@@ -24,8 +24,10 @@
 
         <div class="item" align="center">
             <img src="/static/Pictures/mimi2.jpg" alt=""/>
-            <div class="carousel-caption">
+        	<div class="container">
+           	 <div class="carousel-caption">
                 <p>Mimi is pretty</p>
+            </div>
             </div>
         </div>
 
@@ -86,6 +88,57 @@
 		</div>
 		
 	</div>
+	<br>
+	<br>
+	<!-- START THE FEATURETTES -->
+	<hr class="featurette-divider">
+	<div class="featurette">
+		<img class="featurette-impage pull-right" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTF1wzUXZMhkGljMxFWc9l0Yqe9W90xJWZjmyPYLvjPzWxoJIpG" style="width: 400px; height: 400px;">
+		<h2 class="featurette-heading">
+			Get A Grip.
+			<span class="muted">Lose A Slip.</span>
+		</h2>
+		<p class="lead">
+			Get-A-Grip is made from high performance platinum core liquid silicone compounds; the superior physical properties of the silicone create exceptionally strong tear-resistant and elastic yet soft to touch material that provides a no-slip grip for your steering wheel. Other products are typically made from big and bulky substances such as memory foam or leather, which can easily slip from the wheel and the drivers’ grasp. Our products fit securely to the wheel, and produces a soft yet firm grip, making for safer and more efficient driving. Although each driver has his or her own driving experiences and driving habits, Get-A-Grip is a compatible fit for any and every driver. The smooth and flawless feel of Get-A-Grip makes drivers want to keep their hands on the wheel.
+		</p>
+	</div>
+	<br>
+	<hr class=featurette-divider">
+	<div class="featurette">
+		<img class="featurette-image pull-left" src="http://static.ddmcdn.com/gif/dashboard-display-1.jpg" style="width: 400px; height: 400px;">
+		<h2 class="featurette-heading"> 
+			Steering Wheel too hot or too cold?
+			<span class="muted">No problem. Microwaveable in the winter, Refrigerated in the summer.</span>
+		</h2>
+		<p class="lead">
+			In extreme temperatures, steering wheels often get too hot or too cold to touch, making the driving experience more difficult and less enjoyable. With Get-A-Grip, our products are temperature-resistant and revert back to room temperatures within minutes, providing a cooler grip in the summer and a warmer grip in the winter. After many studies, including freezing the product for 24 hours, placing the product in boiling water for 30 minutes, and leaving the product out in the sun for 30 days, our Get-A-Grip steering wheel grip successfully retained its shape, color, size, and flexibility. 
+		</p>
+	</div>
+	<br>
+	<hr class=featurette-divider">
+	<div class=featurette"> 
+		<img class="featurette-image pull-right" src="http://img.directindustry.com/images_di/photo-g/silicone-rubber-sheet-vmq-50843-2416541.jpg" style="width: 400px; height: 400px;">
+		<h2 class="featurette-heading">
+			Sleek and On-The-Go.
+			<span class="muted"> Carry it anywhere and everywhere. It stretches to fit and contracts to store.</span>
+		<p class="lead">
+			Get-A-Grip steering grips fit most standard cars. The novelty of using silicone in our products is the flexibility and versatility it offers. Instead of the bulkiness other materials such as leather have, our silicone products are easier to store and more compact. The innovative structure of the grips allows the product to be folded and takes up minimal space in any compartment. Soft yet incredibly durable, Get-A-Grip stretches up to two inches to fit any wheel size, object, or household item while providing a no-slip grip! No matter how you use the grip, it does not lose it’s compactness, elasticity, flexibility, and versatility. 
+		</p>
+	</div>
+	<br>
+	<hr class=featurette-divider">
+	<div class=featurette">
+		<img class="featurette-image pull-left" src="http://i.imgur.com/PhkbBJ6.png" style="width: 400px; height: 400px;">
+		<h2 class="featurette-heading">
+			Snap it on in under three seconds.
+			<span class="muted"> When you're done, throw it into the dishwasher to clean.</span>
+		</h2>
+		<p class="lead">
+			Other steering wheel grips are difficult to put on and slip off easily if not put on correctly. However, putting Get-A-Grip takes just three seconds to slip on! The silicone properties of Get-A-Grip allow the grip to mold perfectly to your steering wheel and stretches to fit tightly and snugly. See our instructional video here. When it’s time to wash it, snap it off and throw it in the dishwasher. It’s proven to be dishwasher safe and prevents most bacteria from spreading. 
+		</p>
+	</div>
+	
+	<!-- /END OF FEATURETTES -->		
 </div>
 {% endblock %}
 
