messed lots of stuff up mostly working on logins

--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
 				"High performance silicone compounds mold the product to your steering wheel, giving you a no slip grip for every driving experience."
 			</p>
 			<p>
-				<a class="btn" href="#">View details &raquo;</a></p>
+				<a class="btn" href="#firstFeature">View details &raquo;</a></p>
 			</p>
 		</div>
 		
@@ -70,27 +70,28 @@
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
 			<h2> Weather Resistant</h2> 
 			<p> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility."</p>
-			<p><a class="btn" href-'#"> View Details &raquo;</a></p>
+			<p><a class="btn" href="#secondFeature"> View Details &raquo;</a></p>
 		</div>
 		
 		<div class="span3">
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
 			<h2>Compact, Flexible, Versatile</h2>
 			<p>"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
-			<p><a class="btn" href="#">View Details &raquo;</a></p>
+			<p><a class="btn" href="#thirdFeature">View Details &raquo;</a></p>
 		</div>
 		
 		<div class="span3">
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;">
 			<h2>Easy to use, Easy to clean</h2>
 			<p>"Unlike other products, Get-A-Grip can be applied in just three seconds! Simply place the product on the top of the wheel, pull down on the sides, and snap the bottom on to complete. When you're done, unsnap it buy pulling on the bottom, and then throw it in the dish washer to wash! It is 100% dishwasher safe and anti-bacterial."</p>
-			<p><a class="btn" href="#">View Details &raquo;</a></p>
+			<p><a class="btn" href="#fourthFeature">View Details &raquo;</a></p>
 		</div>
 		
 	</div>
 	<br>
 	<br>
 	<!-- START THE FEATURETTES -->
+	<a name="firstFeature"> </a>
 	<hr class="featurette-divider">
 	<div class="featurette">
 		<img class="featurette-impage pull-right" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTF1wzUXZMhkGljMxFWc9l0Yqe9W90xJWZjmyPYLvjPzWxoJIpG" style="width: 400px; height: 400px;">
@@ -103,6 +104,7 @@
 		</p>
 	</div>
 	<br>
+	<a name="secondFeature"> </a>
 	<hr class=featurette-divider">
 	<div class="featurette">
 		<img class="featurette-image pull-left" src="http://static.ddmcdn.com/gif/dashboard-display-1.jpg" style="width: 400px; height: 400px;">
@@ -115,6 +117,7 @@
 		</p>
 	</div>
 	<br>
+	<a name="thirdFeature"> </a>
 	<hr class=featurette-divider">
 	<div class=featurette"> 
 		<img class="featurette-image pull-right" src="http://img.directindustry.com/images_di/photo-g/silicone-rubber-sheet-vmq-50843-2416541.jpg" style="width: 400px; height: 400px;">
@@ -126,6 +129,7 @@
 		</p>
 	</div>
 	<br>
+	<a name="fourthFeature"> </a>
 	<hr class=featurette-divider">
 	<div class=featurette">
 		<img class="featurette-image pull-left" src="http://i.imgur.com/PhkbBJ6.png" style="width: 400px; height: 400px;">
