mimi's design changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,26 +16,20 @@
     
     <div class="carousel-inner">
         <div align="center" class="active item">
-            <img src="/static/Pictures/mimi1.jpg" alt=""/>
-            <div class="carousel-caption">
-                <p>Mimi is cute</p>
-            </div>
+            <img src="/static/Pictures/mimi1.jpg" alt="" style="width: 1000px; height: 500px;"/>
+            
         </div>
 
         <div class="item" align="center">
-            <img src="/static/Pictures/mimi2.jpg" alt=""/>
+            <img src="/static/Pictures/mimi2.jpg" alt="" style="width: 1000px; height: 500px;"/>
         	<div class="container">
-           	 <div class="carousel-caption">
-                <p>Mimi is pretty</p>
-            </div>
+           	 
             </div>
         </div>
 
         <div class="item" align="center">
-            <img src="/static/Pictures/mimi3.jpg" alt=""/>
-            <div class="carousel-caption">
-                <p>Mimi is da bomb</p>
-            </div>
+            <img src="/static/Pictures/mimi3.jpg" alt="" style="width: 1000px; height: 500px;"/>
+            
         </div>
     </div>
     
@@ -62,6 +56,14 @@
 				"High performance silicone compounds mold the product to your steering wheel, giving you a no slip grip for every driving experience."
 			</p>
 			<p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 				<a class="btn" href="#">View details &raquo;</a></p>
 			</p>
 		</div>
@@ -70,6 +72,11 @@
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
 			<h2> Weather Resistant</h2> 
 			<p> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility."</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 			<p><a class="btn" href-'#"> View Details &raquo;</a></p>
 		</div>
 		
@@ -77,6 +84,7 @@
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
 			<h2>Compact, Flexible, Versatile</h2>
 			<p>"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
+			<br>
 			<p><a class="btn" href="#">View Details &raquo;</a></p>
 		</div>
 		
@@ -90,8 +98,13 @@
 	</div>
 	<br>
 	<br>
+	
+	
 	<!-- START THE FEATURETTES -->
+	
+	
 	<hr class="featurette-divider">
+	<br>
 	<div class="featurette">
 		<img class="featurette-impage pull-right" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTF1wzUXZMhkGljMxFWc9l0Yqe9W90xJWZjmyPYLvjPzWxoJIpG" style="width: 400px; height: 400px;">
 		<h2 class="featurette-heading">
@@ -104,6 +117,7 @@
 	</div>
 	<br>
 	<hr class=featurette-divider">
+	<br>
 	<div class="featurette">
 		<img class="featurette-image pull-left" src="http://static.ddmcdn.com/gif/dashboard-display-1.jpg" style="width: 400px; height: 400px;">
 		<h2 class="featurette-heading"> 
@@ -116,6 +130,7 @@
 	</div>
 	<br>
 	<hr class=featurette-divider">
+	<br>
 	<div class=featurette"> 
 		<img class="featurette-image pull-right" src="http://img.directindustry.com/images_di/photo-g/silicone-rubber-sheet-vmq-50843-2416541.jpg" style="width: 400px; height: 400px;">
 		<h2 class="featurette-heading">
@@ -127,8 +142,9 @@
 	</div>
 	<br>
 	<hr class=featurette-divider">
+	<br>
 	<div class=featurette">
-		<img class="featurette-image pull-left" src="http://i.imgur.com/PhkbBJ6.png" style="width: 400px; height: 400px;">
+		<img class="featurette-image pull-left" src="http://i.imgur.com/PhkbBJ6.png" style="width: 400px; height: 4py00px;">
 		<h2 class="featurette-heading">
 			Snap it on in under three seconds.
 			<span class="muted"> When you're done, throw it into the dishwasher to clean.</span>
