--- a/templates/home.html
+++ b/templates/home.html
@@ -56,19 +56,15 @@
 				"High performance silicone compounds mold the product to your steering wheel, giving you a no slip grip for every driving experience."
 			</p>
 			<p>
-<<<<<<< HEAD
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 				<a class="btn" href="#firstFeature">View details &raquo;</a></p>
-=======
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-				<a class="btn" href="#">View details &raquo;</a></p>
->>>>>>> ba8e02a5f19733cbcb0533232a2eb1ebe31c3907
 			</p>
 		</div>
 		
@@ -76,28 +72,20 @@
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
 			<h2> Weather Resistant</h2> 
 			<p> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility."</p>
-<<<<<<< HEAD
-			<p><a class="btn" href="#secondFeature"> View Details &raquo;</a></p>
-=======
 			<br>
 			<br>
 			<br>
 			<br>
 			<br>
-			<p><a class="btn" href-'#"> View Details &raquo;</a></p>
->>>>>>> ba8e02a5f19733cbcb0533232a2eb1ebe31c3907
+			<p><a class="btn" href-'#secondFeature"> View Details &raquo;</a></p>
 		</div>
 		
 		<div class="span3">
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
 			<h2>Compact, Flexible, Versatile</h2>
 			<p>"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
-<<<<<<< HEAD
-			<p><a class="btn" href="#thirdFeature">View Details &raquo;</a></p>
-=======
 			<br>
 			<p><a class="btn" href="#">View Details &raquo;</a></p>
->>>>>>> ba8e02a5f19733cbcb0533232a2eb1ebe31c3907
 		</div>
 		
 		<div class="span3">
@@ -113,12 +101,7 @@
 	
 	
 	<!-- START THE FEATURETTES -->
-<<<<<<< HEAD
 	<a name="firstFeature"> </a>
-=======
-	
-	
->>>>>>> ba8e02a5f19733cbcb0533232a2eb1ebe31c3907
 	<hr class="featurette-divider">
 	<br>
 	<div class="featurette">
