--- a/templates/template.html
+++ b/templates/template.html
@@ -11,8 +11,14 @@
     	{
     	background-color: white;
     	width: 1000px;
-    	}
-    	
+		padding: 10px; 15px;
+		}
+    	.center
+		{
+			margin-left:auto;
+			margin-right:auto;
+			width:70%;
+		}
                .navbar-wrapper {
       position: absolute;
       top: 0;
@@ -24,7 +30,7 @@
     }
      .pills {
     margin: 0 auto;
-    padding: 0;
+    padding: 0px;
     width: 1000px;
 }       
 	.centered-pills { text-align:center; }
@@ -32,7 +38,8 @@
 	.centered-pills li { display:inline; }
 	.centered-pills a { float:left; }
 	
-	
+	.serif{font-family:Times New Roman,Times,serf;}
+	.psansserif{font-family:Arial,Helvetica,sans-serif;}
         </style>
         <title>{{ title }} :: Better Grip</title>
         
@@ -42,15 +49,15 @@
     </head>
     
     <body>
-    <div class"container"
+  
+    <div class="container">
         <h1 align="center"><img src="http://i.imgur.com/RBsuaPK.png" width="250" height="75"></h1>
-        </br>
         <br>
         <div class="pills">
 	<div class="centered-pills">
         <ul class="nav nav-pills">
             <li class="active"><a href="/">HOME</a></li>
-            <li><a href="/store">STORE</a></li>
+            <li><a href="/store">STORE</a> </li>
             <li><a href="/about">ABOUT US</a></li>
             <li><a href="/faq">FAQ</a></li>
             <li><a href="/contact">CONTACT US</a></li>
@@ -64,7 +71,6 @@
         </div>
 	</ul>
 	</div>
-        <div class="container">
             {% block content %} {% endblock %}
         </div>
         
@@ -110,6 +116,7 @@
   </div>
 </div>
 	</div>
+	</p>
     </body>
     
 </html>
