tried title variable in templates

--- a/templates/store.html
+++ b/templates/store.html
@@ -1,9 +1,6 @@
 {% extends "template.html" %}
 
-{% block title %}
-    Store :: Better Grip
-{% endblock %}
-
 {% block content %}
-    <div class="hero-unit"><h1>Store</h1></div>
+    <div class="hero-unit"><h1>Store</h1></div> <hr/><br/>
+    {for }
 {% endblock %}
