--- a/templates/about.html
+++ b/templates/about.html
@@ -5,5 +5,6 @@ About :: GetAGrip
 {% endblock  %}
 
 {% block content %}
-    <div class="hero-unit"><h1>About</h1></div>
+<h2>About Us</h2>
+    Content content content content content
 {% endblock  %}
