--- a/templates/home.html
+++ b/templates/home.html
@@ -9,26 +9,25 @@
 {% endblock %}
 
 {% block content %}
-<br>
     <div id="homeCarousel" class="carousel slide">
 
     <!-- Carousel items -->
     
     <div class="carousel-inner">
         <div align="center" class="active item">
-            <img src="/static/Pictures/mimi1.jpg" alt="" style="width: 1000px; height: 500px;"/>
+            <img src="/static/Pictures/mimi1.jpg" alt="" style="width: 980px; height: 500px;"/>
             
         </div>
 
         <div class="item" align="center">
-            <img src="/static/Pictures/mimi2.jpg" alt="" style="width: 1000px; height: 500px;"/>
+            <img src="/static/Pictures/mimi2.jpg" alt="" style="width: 980px; height: 500px;"/>
         	<div class="container">
            	 
             </div>
         </div>
 
         <div class="item" align="center">
-            <img src="/static/Pictures/mimi3.jpg" alt="" style="width: 1000px; height: 500px;"/>
+            <img src="/static/Pictures/mimi3.jpg" alt="" style="width: 980px; height: 500px;"/>
             
         </div>
     </div>
@@ -43,19 +42,19 @@
             $('.carousel').carousel();
            });
     </script>
-<div class="container marketing">
+
 
 	<!-- Four columns of text below the carousel -->
 	
 	<div class="row">
 	
 		<div class="span3">
-			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;">
-			<h2> No Slip Grip</h2>
-			<p>
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" align="center">
+			<h2 align="center"> No Slip Grip</h2>
+			<p align="center">
 				"High performance silicone compounds mold the product to your steering wheel, giving you a no slip grip for every driving experience."
 			</p>
-			<p>
+			<p align="center">
 			<br>
 			<br>
 			<br>
@@ -69,30 +68,30 @@
 		</div>
 		
 		<div class="span3">
-			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
-			<h2> Weather Resistant</h2> 
-			<p> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility."</p>
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" align="center" >
+			<h2 align="center"> Weather Resistant</h2> 
+			<p align="center"> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility."</p>
 			<br>
 			<br>
 			<br>
 			<br>
 			<br>
-			<p><a class="btn" href-'#secondFeature"> View Details &raquo;</a></p>
+			<p align="center"><a class="btn" href-'#secondFeature"> View Details &raquo;</a></p>
 		</div>
 		
 		<div class="span3">
-			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" >
-			<h2>Compact, Flexible, Versatile</h2>
-			<p>"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" align="center" >
+			<h2 align="center">Compact, Flexible, Versatile</h2>
+			<p align="center">"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
 			<br>
-			<p><a class="btn" href="#">View Details &raquo;</a></p>
+			<p align="center"><a class="btn" href="#">View Details &raquo;</a></p>
 		</div>
 		
 		<div class="span3">
-			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;">
-			<h2>Easy to use, Easy to clean</h2>
-			<p>"Unlike other products, Get-A-Grip can be applied in just three seconds! Simply place the product on the top of the wheel, pull down on the sides, and snap the bottom on to complete. When you're done, unsnap it buy pulling on the bottom, and then throw it in the dish washer to wash! It is 100% dishwasher safe and anti-bacterial."</p>
-			<p><a class="btn" href="#fourthFeature">View Details &raquo;</a></p>
+			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" align="center">
+			<h2 align="center">Easy to use, Easy to clean</h2>
+			<p align="center">"Unlike other products, Get-A-Grip can be applied in just three seconds! Simply place the product on the top of the wheel, pull down on the sides, and snap the bottom on to complete. When you're done, unsnap it buy pulling on the bottom, and then throw it in the dish washer to wash! It is 100% dishwasher safe and anti-bacterial."</p>
+			<p align="center"><a class="btn" href="#fourthFeature">View Details &raquo;</a></p>
 		</div>
 		
 	</div>
@@ -105,7 +104,8 @@
 	<hr class="featurette-divider">
 	<br>
 	<div class="featurette">
-		<img class="featurette-impage pull-right" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTF1wzUXZMhkGljMxFWc9l0Yqe9W90xJWZjmyPYLvjPzWxoJIpG" style="width: 400px; height: 400px;">
+
+		<img class="featurette-impage pull-right" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTF1wzUXZMhkGljMxFWc9l0Yqe9W90xJWZjmyPYLvjPzWxoJIpG" style="width: 350px; height: 350px;">
 		<h2 class="featurette-heading">
 			Get A Grip.
 			<span class="muted">Lose A Slip.</span>
@@ -119,7 +119,7 @@
 	<hr class=featurette-divider">
 	<br>
 	<div class="featurette">
-		<img class="featurette-image pull-left" src="http://static.ddmcdn.com/gif/dashboard-display-1.jpg" style="width: 400px; height: 400px;">
+		<img class="featurette-image pull-left" src="http://static.ddmcdn.com/gif/dashboard-display-1.jpg" style="width: 350px; height: 350px;">
 		<h2 class="featurette-heading"> 
 			Steering Wheel too hot or too cold?
 			<span class="muted">No problem. Microwaveable in the winter, Refrigerated in the summer.</span>
@@ -133,7 +133,8 @@
 	<hr class=featurette-divider">
 	<br>
 	<div class=featurette"> 
-		<img class="featurette-image pull-right" src="http://img.directindustry.com/images_di/photo-g/silicone-rubber-sheet-vmq-50843-2416541.jpg" style="width: 400px; height: 400px;">
+	
+		<img class="featurette-image pull-right" src="http://img.directindustry.com/images_di/photo-g/silicone-rubber-sheet-vmq-50843-2416541.jpg" style="width: 350px; height: 350px;">
 		<h2 class="featurette-heading">
 			Sleek and On-The-Go.
 			<span class="muted"> Carry it anywhere and everywhere. It stretches to fit and contracts to store.</span>
@@ -146,7 +147,7 @@
 	<hr class=featurette-divider">
 	<br>
 	<div class=featurette">
-		<img class="featurette-image pull-left" src="http://i.imgur.com/PhkbBJ6.png" style="width: 400px; height: 4py00px;">
+		<img class="featurette-image pull-left" src="http://i.imgur.com/PhkbBJ6.png" style="width: 350px; height: 350px;">
 		<h2 class="featurette-heading">
 			Snap it on in under three seconds.
 			<span class="muted"> When you're done, throw it into the dishwasher to clean.</span>
