fixed broken 'view details' # links

--- a/templates/home.html
+++ b/templates/home.html
@@ -76,7 +76,7 @@
 			<br>
 			<br>
 			<br>
-			<p align="center"><a class="btn" href-'#secondFeature"> View Details &raquo;</a></p>
+			<p align="center"><a class="btn" href="#secondFeature"> View Details &raquo;</a></p>
 		</div>
 		
 		<div class="span3">
@@ -84,7 +84,7 @@
 			<h2 align="center">Compact, Flexible, Versatile</h2>
 			<p align="center">"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
 			<br>
-			<p align="center"><a class="btn" href="#">View Details &raquo;</a></p>
+			<p align="center"><a class="btn" href="#thirdFeature">View Details &raquo;</a></p>
 		</div>
 		
 		<div class="span3">
