changed nav-pills font

--- a/templates/template.html
+++ b/templates/template.html
@@ -50,7 +50,7 @@
         <br>
         <div class="pills">
 	<div class="centered-pills">
-        <ul class="nav nav-pills">
+        <ul class="nav nav-pills serif">
             <li class="active"><a href="/">HOME</a></li>
             <li><a href="/store">STORE</a> </li>
             <li><a href="/about">ABOUT US</a></li>
