--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='bootstrap/css/bootstrap.css')}}" />
         <style>
@@ -14,8 +15,8 @@
     	width: 1000px;
 		padding: 10px; 15px;
 		}
-		
-		
+
+
      .navbar-wrapper {
       position: absolute;
       top: 0;
@@ -34,11 +35,11 @@
 	.centered-pills ul.nav-pills { display:inline-block; }
 	.centered-pills li { display:inline; }
 	.centered-pills a { float:left; }
-	
+
 	.serif{font-family:Times New Roman,Times,serf;}
 	.psansserif{font-family:Arial,Helvetica,sans-serif;}
-	
-	
+
+
         </style>
         <title>{{ title }} :: Better Grip</title>
         
