--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,12 +9,11 @@
 <br>
 <div class="container-fluid" style="margin: 1px 40px;">
   <div class="row-fluid">
-    <div class="span2" style="background-color:red;height:250px;width:200px;float:left; margin:0px 20px;">
-      <b><h2>Better-Grip LLC</b></h2>
+    <div class="span2" style="background-color:	#C80000 ;height:250px;width:200px;float:left; margin:0px 20px;">
+      <b><h2 style="color:white;" align="center">Better-Grip LLC</b></h2>
 		<br>
-		Insert picture
+		<img src="http://i.imgur.com/PhkbBJ6.png" style=" width: 100px; height: 100px;" align="center">
 		<br>
-		info@bettergrip.com
     </div>
         <form>
             <input align= "center" style="width: 510px; height:20px margin: 20px;"type="text" name="Fullname" placeholder="Name"><br>
