--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+        <script src="static/bootstrap/js/bootstrap.min.js"></script>
         <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='bootstrap/css/bootstrap.css')}}" />
         <style>
         body
@@ -14,10 +14,6 @@
     	width: 1000px;
 		padding: 10px; 15px;
 		}
-<<<<<<< HEAD
-
-
-=======
 		.round {border-radius: 25px;
 		}
 		p.marginnav
@@ -27,8 +23,7 @@ margin-bottom:0px;
 margin-right:10px;
 margin-left:10px;
 }
-		
->>>>>>> 10e3d68b5d16995c7b3e5af88e43cbe966f5915a
+
      .navbar-wrapper {
       position: absolute;
       top: 0;
@@ -55,19 +50,11 @@ letter-spacing: 1px;
 	.centered-pills ul.nav-pills { display:inline-block; }
 	.centered-pills li { display:inline; }
 	.centered-pills a { float:left; }
-<<<<<<< HEAD
 
-	.serif{font-family:Times New Roman,Times,serf;}
-	.psansserif{font-family:Arial,Helvetica,sans-serif;}
-
-
-=======
-	
 	.serif{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;}
 	.psansserif{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;}
-	
-	
->>>>>>> 10e3d68b5d16995c7b3e5af88e43cbe966f5915a
+
+
         </style>
         <title>{{ title }} :: Better Grip</title>
         
