--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -27,6 +27,7 @@
     <!-- Carousel nav -->
         
     </div>
+    <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
     <script>
         $(document).ready(function(){
             $('.carousel').carousel();
