--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,10 @@
 {% extends "template.html" %}
 
+
+{% block title %}
+   Home :: GetAGrip
+{% endblock %}
+
 {% block content %}
     <div id="homeCarousel" class="carousel slide">
 
@@ -27,7 +32,6 @@
     <!-- Carousel nav -->
         
     </div>
-    <script src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
     <script>
         $(document).ready(function(){
             $('.carousel').carousel();
@@ -36,9 +40,9 @@
 
 
 	<!-- Four columns of text below the carousel -->
-	
+
 	<div class="row" align="center">
-	
+
 		<div class="span3">
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" align="center">
 			<h2 align="center"> No Slip Grip</h2>
@@ -57,11 +61,12 @@
 				<a class="btn" href="#firstFeature">View details &raquo;</a></p>
 			</p>
 		</div>
-		
+
 		<div class="span3">
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;">
 			<h2 align="center"> Weather Resistant</h2> 
-			<p align="center" class="serif"> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions without losing its color, elasticity, shape, and flexibility."</p>
+			<p align="center" class="serif"> "Get-A-Grip is durable and long lasting through extreme temperature changes, as well as varying weather conditions 
+without losing its color, elasticity, shape, and flexibility."</p>
 			<br>
 			<br>
 			<br>
@@ -69,19 +74,21 @@
 			<br>
 			<p align="center"><a class="btn" href="#secondFeature"> View Details &raquo;</a></p>
 		</div>
-		
+
 		<div class="span3">
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" align="center" >
 			<h2 align="center">Compact, Flexible, Versatile</h2>
-			<p align="center" class="serif">"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
+			<p align="center" class="serif">"Innovative in its material and design, Get-A-Grip is less bulky than other materials and takes up less space. Store 
+it in any compartment, or take it on the go! Its elasticity allows it to be used virtually anywhere and everywhere."</p>
 			<br>
 			<p align="center"><a class="btn" href="#thirdFeature">View Details &raquo;</a></p>
 		</div>
-		
+
 		<div class="span3">
 			<img class="img-circle" src="static/Pictures/mimi2.jpg" style="width: 140px; height: 140px;" align="center">
 			<h2 align="center">Easy to use, Easy to clean</h2>
-			<p align="center" class="serif">Get-A-Grip can be applied in just three seconds! When you're done, unsnap it and throw it in the dish washer to wash! It is 100% dishwasher safe and anti-bacterial."</p>
+			<p align="center" class="serif">Get-A-Grip can be applied in just three seconds! When you're done, unsnap it and throw it in the dish washer to wash! 
+It is 100% dishwasher safe and anti-bacterial."</p>
 			<br>
 			<br>
 			<br>
@@ -89,12 +96,12 @@
 			<br>
 			<p align="center"><a class="btn" href="#fourthFeature">View Details &raquo;</a></p>
 		</div>
-		
+
 	</div>
 	<br>
 	<br>
-	
-	
+
+
 	<!-- START THE FEATURETTES -->
 	<a name="firstFeature"> </a>
 	<hr class="featurette-divider">
@@ -102,13 +109,18 @@
 	<br>
 	<div class="featurette">
 
-		<img class="featurette-impage pull-right" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTF1wzUXZMhkGljMxFWc9l0Yqe9W90xJWZjmyPYLvjPzWxoJIpG" style="width: 275px; height: 275px;">
+		<img class="featurette-impage pull-right" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTF1wzUXZMhkGljMxFWc9l0Yqe9W90xJWZjmyPYLvjPzWxoJIpG" 
+style="width: 275px; height: 275px;">
 		<h2 class="featurette-heading" style="margin: 20px;">
 			Get A Grip.
 			<span class="muted">Lose A Slip.</span>
 		</h2>
 		<p class="serif" font size="4" style="width: 650px; margin: 40px;" align="justify">
-			Get-A-Grip is made from high performance platinum core liquid silicone compounds; the superior physical properties of the silicone create exceptionally strong tear-resistant and elastic yet soft to touch material that provides a no-slip grip for your steering wheel. Other products are typically made from big and bulky substances such as memory foam or leather, which can easily slip from the wheel and the drivers’ grasp. Our products fit securely to the wheel, and produces a soft yet firm grip, making for safer and more efficient driving. Although each driver has his or her own driving experiences and driving habits, Get-A-Grip is a compatible fit for any and every driver. The smooth and flawless feel of Get-A-Grip makes drivers want to keep their hands on the wheel.
+			Get-A-Grip is made from high performance platinum core liquid silicone compounds; the superior physical properties of the silicone create 
+exceptionally strong tear-resistant and elastic yet soft to touch material that provides a no-slip grip for your steering wheel. Other products are typically made from big 
+and bulky substances such as memory foam or leather, which can easily slip from the wheel and the drivers’ grasp. Our products fit securely to the wheel, and produces a soft 
+yet firm grip, making for safer and more efficient driving. Although each driver has his or her own driving experiences and driving habits, Get-A-Grip is a compatible fit 
+for any and every driver. The smooth and flawless feel of Get-A-Grip makes drivers want to keep their hands on the wheel.
 		</p>
 	</div>
 	<br>
@@ -124,7 +136,10 @@
 			<span class="muted" align="right">No problem. Microwaveable in the winter, Refrigerated in the summer.</span>
 		</h2>
 		<p class="serif" font size="4" style="margin: 1px 30px 1px 345px;" align="justify">
-			In extreme temperatures, steering wheels often get too hot or too cold to touch, making the driving experience more difficult and less enjoyable. With Get-A-Grip, our products are temperature-resistant and revert back to room temperatures within minutes, providing a cooler grip in the summer and a warmer grip in the winter. After many studies, including freezing the product for 24 hours, placing the product in boiling water for 30 minutes, and leaving the product out in the sun for 30 days, our Get-A-Grip steering wheel grip successfully retained its shape, color, size, and flexibility. 
+			In extreme temperatures, steering wheels often get too hot or too cold to touch, making the driving experience more difficult and less enjoyable. 
+With Get-A-Grip, our products are temperature-resistant and revert back to room temperatures within minutes, providing a cooler grip in the summer and a warmer grip in the 
+winter. After many studies, including freezing the product for 24 hours, placing the product in boiling water for 30 minutes, and leaving the product out in the sun for 30 
+days, our Get-A-Grip steering wheel grip successfully retained its shape, color, size, and flexibility. 
 		</p>
 		<br>
 	</div>
@@ -134,14 +149,18 @@
 	<br>
 	<br>
 	<div class="featurette"> 
-	
-		<img class="featurette-image pull-right" src="http://img.directindustry.com/images_di/photo-g/silicone-rubber-sheet-vmq-50843-2416541.jpg" style="width: 275px; height: 275px;">
+
+		<img class="featurette-image pull-right" src="http://img.directindustry.com/images_di/photo-g/silicone-rubber-sheet-vmq-50843-2416541.jpg" style="width: 
+275px; height: 275px;">
 		<h2 class="featurette-heading" style="margin: 20px;">
 			Sleek and On-The-Go.
 			<span class="muted"> Carry it anywhere and everywhere. It stretches to fit and contracts to store.</span>
 		</h2>
 		<p class="serif" font size="4" style="width: 650px; margin: 40px;" align="justify">
-			Get-A-Grip steering grips fit most standard cars. The novelty of using silicone in our products is the flexibility and versatility it offers. Instead of the bulkiness other materials such as leather have, our silicone products are easier to store and more compact. The innovative structure of the grips allows the product to be folded and takes up minimal space in any compartment. Soft yet incredibly durable, Get-A-Grip stretches up to two inches to fit any wheel size, object, or household item while providing a no-slip grip! No matter how you use the grip, it does not lose it’s compactness, elasticity, flexibility, and versatility. 
+			Get-A-Grip steering grips fit most standard cars. The novelty of using silicone in our products is the flexibility and versatility it offers. Instead 
+of the bulkiness other materials such as leather have, our silicone products are easier to store and more compact. The innovative structure of the grips allows the product 
+to be folded and takes up minimal space in any compartment. Soft yet incredibly durable, Get-A-Grip stretches up to two inches to fit any wheel size, object, or household 
+item while providing a no-slip grip! No matter how you use the grip, it does not lose it’s compactness, elasticity, flexibility, and versatility. 
 		</p>
 	</div>
 	<br>
@@ -156,17 +175,15 @@
 			<span class="muted" align="right"> When you're done, throw it into the dishwasher to clean.</span>
 		</h2>
 		<p class="serif" font size="4" align="justify" style="margin: 20px;">
-			Other steering wheel grips are difficult to put on and slip off easily if not put on correctly. However, putting Get-A-Grip takes just three seconds to slip on! The silicone properties of Get-A-Grip allow the grip to mold perfectly to your steering wheel and stretches to fit tightly and snugly. See our instructional video here. When it’s time to wash it, snap it off and throw it in the dishwasher. It’s proven to be dishwasher safe and prevents most bacteria from spreading. 
+			Other steering wheel grips are difficult to put on and slip off easily if not put on correctly. However, putting Get-A-Grip takes just three seconds 
+to slip on! The silicone properties of Get-A-Grip allow the grip to mold perfectly to your steering wheel and stretches to fit tightly and snugly. See our instructional 
+video here. When it’s time to wash it, snap it off and throw it in the dishwasher. It’s proven to be dishwasher safe and prevents most bacteria from spreading. 
 		</p>
 		<br>
 		<br>
 		<br>
 	</div>
-	
+
 	<!-- /END OF FEATURETTES -->		
-
-
 </div>
 {% endblock %}
-
-
