fixedspacein comment body

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -18,8 +18,7 @@
         <form>
             <input align= "center" style="width: 510px; height:20px margin: 20px;"type="text" name="Fullname" placeholder="Name"><br>
         	<input align ="center" style="width: 510px; height:20px" type="text" name="Email" placeholder="Email"><br>
-            <textarea align="left" style="width: 510px; height:120px" name="YourComment" >
-                </textarea>
+            <textarea align="left" style="width: 510px; height:120px" name="YourComment" ></textarea>
                 <br>
             <button align="right" type="submit" formaction="http://....//">Submit</button>
         </form>
