edited store page

--- a/app/templates/store.html
+++ b/app/templates/store.html
@@ -7,29 +7,73 @@
 
 
 {% block content %}
- <div class="hero-unit"><h1>Store</h1></div> <hr/><br/>
-<<<<<<< HEAD
-    <div class="row">
-  <div class="span2">...</div>
-  <div class="span2">...</div>
-</div>
 
-=======
- <div class="row" align="center">
-  	<div class="span4">
-  		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSD7EM-JA4kJ5ruLBbdevSyDLqBbc7FL2AzILatuZMWSqhm40A" > 
-  		<b>Silicone steering wheel grip</b>
-  		<i>Glow in the dark</i>
+  
+ <div class="row" align="center" style= "margin:10px;">
+  	<div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912"> 
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
   		
   		</div>
-  	<div class="span4">
-  		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSD7EM-JA4kJ5ruLBbdevSyDLqBbc7FL2AzILatuZMWSqhm40A" class="img-polaroid">
-  		<b>Silicone steering wheel grip</b>
-  		<i>Glow in the dark</i>
+  	<div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912">
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
   		
   		</div>
->>>>>>> 3b746fadf7f0724bd4249f0252e97e0a5ace9bb9
-	</div>
+  	 <div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912"> 
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
+  	</div>
+  	 	<div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912"> 
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
+  	</div>
+</div>
+<br>
+<div class="row" align="center" style= "margin:10px;">
+  	<div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912"> 
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
+  		
+  		</div>
+  	<div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912">
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
+  		
+  		</div>
+  	 <div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912"> 
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
+  	</div>
+  	 	<div class="span3">
+  		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912"> 
+  		<br><b>Silicone steering wheel grip</b>
+  		<br><i>Glow in the dark</i>
+  		<button class="btn-block btn-danger" type="button">Buy Now</button>
+		<button class="btn-block" type="button">Add to Cart</button>
+  	</div>
+</div>
 </div>
 
 {% endblock  %}
