contact form from foxyform

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -15,13 +15,30 @@
 		<img src="http://i.imgur.com/PhkbBJ6.png" style=" width: 100px; height: 100px;" align="center">
 		<br>
     </div>
-        <form>
-            <input align= "center" style="width: 510px; height:20px margin: 20px;"type="text" name="Fullname" placeholder="Name"><br>
+<!--        <form action="MAILTO:bettergripLLC@gmail.com" method="post" name="email">
+	    {{contact.hidden_tag()}}
+		Name:<br>{{contact.name(size=80)}}<br>
+		Email:<br>{{contact.email(size=80)}}<br>
+		Message:<br>{{contact.body(size=300)}}
+		<input type="submit" value="Send"></p>
+           <!-- <input align= "center" style="width: 510px; height:20px margin: 20px;"type="text" name="Fullname" placeholder="Name"><br>
         	<input align ="center" style="width: 510px; height:20px" type="text" name="Email" placeholder="Email"><br>
             <textarea align="left" style="width: 510px; height:120px" name="YourComment" ></textarea>
                 <br>
-            <button align="right" type="submit" formaction="http://....//">Submit</button>
-        </form>
+            <button align="right" type="submit" formaction="http://....//">Submit</button> -->
+        </form> -->
+
+<!-- Do not change the code! -->
+<a id="foxyform_embed_link_456561" href="http://www.foxyform.com/">foxyform</a>
+<script type="text/javascript">
+(function(d, t){
+   var g = d.createElement(t),
+       s = d.getElementsByTagName(t)[0];
+   g.src = "http://www.foxyform.com/js.php?id=456561&sec_hash=1ef7452d107&width=350px";
+   s.parentNode.insertBefore(g, s);
+}(document, "script"));
+</script>
+<!-- Do not change the code! -->
   </div>
 </div>
 
