--- a/app/templates/store.html
+++ b/app/templates/store.html
@@ -14,8 +14,14 @@
   		<img src="http://c.shld.net/rpx/i/s/i/spin/image/spin_prod_792287912"> 
   		<br><b>Silicone steering wheel grip</b>
   		<br><i>Glow in the dark</i>
-  		<button class="btn-block btn-danger" type="button">Buy Now</button>
-		<button class="btn-block" type="button">Add to Cart</button>
+<form action="/charge" method="post">
+    <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
+            data-key="{{ key }}"
+            data-description="A Flask Charge"
+            data-amount="500"></script>
+  </form>		
+<button class="btn-block" type="button">Add to 
+Cart</button>
   		
   		</div>
   	<div class="span3">
