--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -78,7 +78,7 @@ letter-spacing: 1px;
             <li><a href="{{ url_for('about') }}">ABOUT US</a></li>
             <li><a href="{{ url_for('faq') }}">FAQ</a></li>
             <li><a href="{{ url_for('contact') }}">CONTACT US</a></li>
-	    	<li><a href="#cart"><i class="icon-shopping-cart">CART</i></a></li>
+	    	<li><a href="#cart">CART<i class="icon-shopping-cart"></i></a></li>
          
     </div>
 	</ul>
